[project]
name = "forjador-v5"
version = "0.1.0"
description = "Forjador v5 - Industrial Fastener SKU Identification Pipeline (SPEC-01 MVP)"
requires-python = ">=3.11"
dependencies = [
    # LangGraph & LangChain Core
    "langgraph>=0.6.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langsmith>=0.2.0",

    # Document Parsing (SPEC-01: 3 parsers)
    "docling>=2.0.0",          # SOL-04: Docling 2.0
    "google-generativeai>=0.8.0",  # SOL-05: Gemini 2.5 Flash Vision

    # Data Processing
    "polars>=0.20.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",         # Excel support
    "pyyaml>=6.0.0",           # YAML validation rules

    # Type Safety & Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",         # Retry logic
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",        # Parallel test execution
    "pytest-timeout>=2.2.0",      # Test timeout handling

    # Code Quality
    "ruff>=0.3.0",
    "mypy>=1.8.0",

    # Pre-commit hooks
    "pre-commit>=3.6.0",

    # Type stubs
    "types-pyyaml>=6.0.0",
    "types-requests>=2.31.0",

    # Development
    "ipython>=8.20.0",
    "ipdb>=0.13.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
